<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        tools:context=".CanteenPage"
        tools:showIn="@layout/activity_canteen_page">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="62dp" />

        <include layout="@layout/info_canteen" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/click_to_view_more_information"
            android:id="@+id/more_infoTextView"
            android:textColor="@color/feast_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/indian_food"
            android:layout_gravity="center"
            android:id="@+id/indian_foodButton"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/western_food"
            android:layout_gravity="center"
            android:id="@+id/western_foodButton"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/healthy_soup"
            android:layout_gravity="center"
            android:id="@+id/healthy_soupButton"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/japanese_and_korean_food"
            android:layout_gravity="center"
            android:id="@+id/japanese_korean_foodButton"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/economic_rice"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:id="@+id/economy_riceButton"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/drinks_and_snacks"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:id="@+id/drinks_snacksButton"/>

    </LinearLayout>

</ScrollView>