<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fnbButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_rectangle_shape"
    android:clickable="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/fnbPhoto"
        android:layout_width="166dp"
        android:layout_height="201dp"
        android:layout_marginStart="244dp"
        android:background="@drawable/rounded_rectangle_shape"
        android:clickable="true"
        android:contentDescription="A photo of the FnB Establishment"
        android:gravity="center"
        android:scaleType="fitXY"
        android:src="@drawable/test_sutd_canteen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fnbEstablishmentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/test_fnbEstablishmentName"
        android:textColor="#000000"
        android:textSize="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286" />

    <TextView
        android:id="@+id/dotText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/dotText"
        android:textColor="#83859C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/waitingTime"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <TextView
        android:id="@+id/waitingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/test_waitingTime"
        android:textColor="#83859C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/waitingTimePhoto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549" />

    <TextView
        android:id="@+id/capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/test_capacity"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dotText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549" />

    <TextView
        android:id="@+id/openingHoursText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/openingHoursText"
        android:textColor="#83859C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waitingTimePhoto"
        app:layout_constraintVertical_bias="0.135" />

    <TextView
        android:id="@+id/isOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/open"
        android:textColor="#83859C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/openingHoursText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />

    <ImageView
        android:id="@+id/historicalTrendPhoto"
        android:layout_width="29dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:contentDescription="An icon depicting a timeline"
        android:gravity="center"
        android:src="@drawable/historical_trends"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openingHoursText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/historyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/historyText"
        android:textColor="#83859C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/historicalTrendPhoto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84" />

    <ImageView
        android:id="@+id/waitingTimePhoto"
        android:layout_width="20dp"
        android:layout_height="15dp"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:contentDescription="An icon of a clock depicting the waiting time"
        android:gravity="center"
        android:src="@drawable/waiting_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551" />


</androidx.constraintlayout.widget.ConstraintLayout>